update todos api
