# controller/todos-controller.js
@@ -1,24 +1,81 @@
 
 const firebase = require('../database/db');
 const Todo = require('../models/todo-model');
+const Todo2 = require('../models/todo2-model');
 const firestore = firebase.firestore();
 
 
 const addTodo = async (req, res, next) => {
     try {
         const data = req.body;
-        console.log(req.body);
-        await firestore.collection('todos').doc().set(data);
+        console.log("requset body = " + req.body.text);
+        //await firestore.collection('todos').doc().set(data);
         res.send('Record saved successfuly');
     } catch (error) {
         res.status(400).send(error.message);
     }
 }
 
+
+const addTodo2 = async (req, res, next) => {
+    try {
+        const text = "tour1";
+        const tourRef = await firestore.collection('tournaments');
+        var query = await tourRef.where("text", "==", text).limit(1).get();
+
+        var tour_id ="";
+        query.forEach(doc => {
+            console.log("requset tournament = " +  doc.id);
+            tour_id =  doc.id;
+        });
+        console.log("requset tournament = " +  tour_id);
+        const text2 = "kiki";
+        const divRef= await firestore.collection('divisions');
+        const query_division = await divRef.where("text", "==", text2).limit(1).get();
+
+        // console.log("requset query_division = " +  query_division[0].id);
+        var div_id ="";
+        query_division.forEach(doc => {
+            console.log("requset division = " +  doc.id);
+            div_id =doc.id;
+        });
+        const data = req.body;
+        const todo = new Todo2(
+            data.text,
+            data.completed,
+            tour_id,
+            div_id,
+            
+        );
+
+        const todo22 = {
+            text : todo.text  , 
+            completed : todo.completed , 
+            tournament : todo.tournament , 
+            division : todo.division
+        };
+
+        
+        console.log("requset body = " + todo22.text);
+        await firestore.collection('todos2').doc().set(todo22);
+                // await firestore.collection('todos2').doc().set({
+        //     text : todo.text  , 
+        //     completed : todo.completed , 
+        //     tournament : todo.tournament , 
+        //     division : todo.division}
+        //     );
+
+        res.send('created  successfuly');
+    } catch (error) {
+        res.status(400).send(error.message);
+    }
+}
+
+
 const getAllTodos = async (req, res, next) => {
     try {
         const docRef = await firestore.collection('todos');
-        const data = await docRef.get();
+        const data = await docRef.limit(2).get();
         const todos = [];
        
         if(data.empty) {
@@ -44,10 +101,11 @@ const getAllTodos = async (req, res, next) => {
 
 
 const getTodo = async (req, res, next) => {
+    console.log(" params = " + req.params.id);
     try {
         const id = req.params.id;
-        const student = await firestore.collection('todos').doc(id);
-        const data = await student.get();
+        const todo = await firestore.collection('todos').doc(id);
+        const data = await todo.get();
         if(!data.exists) {
             res.status(404).send('Todo with the given ID not found');
         }else {
@@ -59,11 +117,12 @@ const getTodo = async (req, res, next) => {
 }
 
 const updateTodo = async (req, res, next) => {
+    console.log(" params = " + req.params.id);
     try {
         const id = req.params.id;
         const data = req.body;
-        const student =  await firestore.collection('Todos').doc(id);
-        await student.update(data);
+        const todo =  await firestore.collection('todos').doc(id);
+        await todo.update(data);
         res.send('Todo record updated successfuly');        
     } catch (error) {
         res.status(400).send(error.message);
@@ -82,6 +141,7 @@ const deleteTodo = async (req, res, next) => {
 
 module.exports = {
     addTodo,
+    addTodo2,
     getAllTodos,
     getTodo,
     updateTodo,
