# models/todo2-model.js
@@ -1,0 +1,13 @@
+class Todo2 {
+    constructor( text, completed ,tournament , devision) {
+          
+            this.text = text;
+            this.completed = completed;
+            this.tournament = tournament;
+            this.division = devision;
+          
+     
+    }
+}
+
+module.exports = Todo2;
